# livespec-driver-claude

./: .gitignore  .livespec.jsonc  .mise.toml  AGENTS.md  BACKLOG.md  CHANGELOG.md  README.md  justfile  lefthook.yml  pyproject.toml  release-please-config.json
.ai/: beads-tenant.md
.beads/: config.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: _result.py  _tmux_hazard.py  block-auto-memory.sh  block_auto_memory.py  hooks.json  no_shadow_ledger.py  tmux_fleet_guard.py  warn-plan-persistence.sh  warn_plan_persistence.py
.claude-plugin/skills/critique/: SKILL.md
.claude-plugin/skills/doctor/: SKILL.md
.claude-plugin/skills/help/: SKILL.md
.claude-plugin/skills/next/: SKILL.md
.claude-plugin/skills/propose-change/: SKILL.md
.claude-plugin/skills/prune-history/: SKILL.md
.claude-plugin/skills/revise/: SKILL.md
.claude-plugin/skills/seed/: SKILL.md
.claude/hooks/: livespec_footgun_guard.py
.github/workflows/: bump-pin-from-dispatch.yml  ci.yml  pin-freshness.yml  release-dispatch.yml  release-park.yml
SPECIFICATION/: contracts.md  scenarios.md
SPECIFICATION/history/: README.md
SPECIFICATION/history/v001/: contracts.md  scenarios.md  spec.md
SPECIFICATION/history/v001/proposed_changes/: retarget-auto-memory-redirect-to-capture-work-item-revision.md  retarget-auto-memory-redirect-to-capture-work-item.md
SPECIFICATION/history/v002/: constraints.md  contracts.md
SPECIFICATION/history/v002/proposed_changes/: cli-end-to-end-harness-contract-revision.md  cli-end-to-end-harness-contract.md
SPECIFICATION/history/v003/: contracts.md  non-functional-requirements.md  scenarios.md
SPECIFICATION/history/v003/proposed_changes/: block-auto-memory-intent-routing-revision.md  block-auto-memory-intent-routing.md
SPECIFICATION/history/v004/: README.md  contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/history/v004/proposed_changes/: out-of-band-edit-2026-06-27t03-05-35z-revision.md  out-of-band-edit-2026-06-27t03-05-35z.md
SPECIFICATION/history/v005/: contracts.md  spec.md
SPECIFICATION/history/v005/proposed_changes/: permit-python-hook-bodies-revision.md  permit-python-hook-bodies.md
SPECIFICATION/proposed_changes/: README.md
_vendor/returns-0.25.0.dist-info/: METADATA  RECORD
dev-tooling/: check_plugin_structure.py
plan/work-item-state-machine/: handoff.md
plan/work-item-state-machine/research/: 01-l2-migration-record.md
tests/: heading-coverage.json
tests/e2e-cli/: CLAUDE.md  __init__.py  conftest.py  test_cli_e2e.py
tests/e2e-cli/fixtures/critique/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/doctor/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/help/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/next/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/propose-change/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/prune-history/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/revise/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/seed/: expected_files.txt  prompt.md
tests/hooks/: test_block_auto_memory.py  test_hook_main_contract.py  test_livespec_footgun_guard.py  test_no_shadow_ledger.py  test_rop_policy.py  test_shipped_hooks_install_shape.py  test_tmux_fleet_guard.py  test_tmux_hazard.py  test_warn_plan_persistence.py
typings/returns/: io.pyi  result.pyi
