# pyproject.toml — livespec-driver-claude dev tooling configuration.
#
# Family conventions scaled to this repo's content: the only Python
# here is the repo-local structural check (stdlib-only) and the
# e2e-cli harness consumer test suite. NO [build-system] section: this
# repo is NOT a published PyPI package; it ships via Claude Code
# plugin bundling.

[project]
name = "livespec-driver-claude"
version = "0.0.0"
description = "Claude Code Driver for livespec — thin /livespec:* SKILL.md bindings"
requires-python = ">=3.10.16"
authors = [
    { name = "Chad Woolley", email = "thewoolleyman@gmail.com" },
]

# Per the livespec convention: NO [project.dependencies] table — the
# plugin bundle carries no runtime Python; end users install nothing.

[dependency-groups]
# Every Python dev tool is uv-managed via this table (resolved into
# uv.lock; installed into a project-local .venv via
# `uv sync --all-groups`). Mise pins only the non-Python binaries in
# .mise.toml.
dev = [
    "ruff==0.8.6",
    "pytest==8.3.4",
    "livespec-dev-tooling",
]

# livespec-dev-tooling is consumed from the github.com sibling-library
# repo via uv git source per
# livespec/SPECIFICATION/contracts.md §"Shared code sync — livespec-dev-tooling"
# (this repo consumes only its `testing.cli_e2e` harness).
[tool.uv.sources]
livespec-dev-tooling = { git = "https://github.com/thewoolleyman/livespec-dev-tooling.git", tag = "v0.36.1" }

# ---------------------------------------------------------------------------
# Ruff — sole linter + formatter. Rule set mirrors the family baseline
# (livespec/pyproject.toml [tool.ruff]) minus the product-code-only
# categories that have no surface in a tests-plus-one-check repo.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
# `.claude-plugin/hooks/**` is excluded so ruff never reformats
# `no_shadow_ledger.py`: that hook body is single-sourced and MUST ship
# BYTE-IDENTICALLY in both Drivers' bundles (livespec core `contracts.md`
# §"Driver-shipped hooks" → cross-Driver single-sourcing), so a
# Driver-local ruff reformat would break byte-identity with the codex
# Driver's copy. The shell hooks in that dir are not `.py` and ruff
# ignores them regardless. (`.claude/hooks/**` is the pre-existing
# project-local hook exclusion.)
extend-exclude = [".claude/hooks/**", ".claude-plugin/hooks/**", "**/__pycache__/**"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "PIE",   # flake8-pie
    "TID",   # flake8-tidy-imports
    "ERA",   # eradicate
    "ARG",   # flake8-unused-arguments
    "PT",    # flake8-pytest-style
    "ISC",   # flake8-implicit-str-concat
    "T20",   # flake8-print — bans print/pprint outside the check's stderr writes
]
ignore = [
    "ISC001",  # implicit-str-concat on one line; conflicts with the formatter
]

# The CLI end-to-end test directory is named `tests/e2e-cli/` by
# convention (livespec/SPECIFICATION/contracts.md §"CLI end-to-end
# harness contract" mandates a `tests/e2e-cli/` directory). The hyphen
# is not a valid Python module-name character, so N999 is exempted for
# that tree (it is never imported as a package by product code).
[tool.ruff.lint.per-file-ignores]
"tests/e2e-cli/**.py" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mock_only: skipped under LIVESPEC_E2E_HARNESS=real per the CLI e2e harness contract",
]

# ---------------------------------------------------------------------------
# livespec-dev-tooling consumer configuration
# (livespec/SPECIFICATION/contracts.md §"Consumer configuration schema").
#
# h3e7: WITHOUT this block, `load_config` falls back to the livespec-core
# historical layout (`.claude-plugin/scripts/livespec/` etc.), which does
# NOT match this thin Driver's real source surface — so
# `check-commit-pairs-source-and-test` was a silent no-op here (it tested
# `path.startswith(source_tree_prefixes)` against core paths that never
# occur in this repo). This block names THIS repo's actual source surface
# so the gate bites.
#
# EMPTY-BASELINE FLIP: the MOMENT any key exists in this block, the
# whole-block-absent core fallback is gone and every OMITTED Config role
# key reverts to the bare `Config()` baseline (empty tuples;
# `tests_tree_prefix` defaults to "tests/"). That is intentional and
# HARMLESS here: this thin Driver invokes only four dev-tooling entry
# points (commit_pairs_source_and_test, heading_coverage, red_green_replay,
# green_token), and the ONLY Config role keys any of them read are
# `source_tree_prefixes` + `tests_tree_prefix` (both via commit_pairs).
# `heading_coverage` reads `scenario_tiers` (a table-direct key, not a
# Config role key); `red_green_replay` and `green_token` read no config.
# The heavy product-tree role keys (`source_trees`, `io_trees`,
# `commands_trees`, `pure_trees`, `dataclasses_tree`, `covered_trees`,
# `target_dirs`, `mirror_pairings`) are read only by canonical checks this
# repo does NOT run, so they are deliberately OMITTED rather than restated
# with fictional paths — naming a tree this repo lacks would mislead
# readers and add a config key that guards nothing (architecture-not-
# mechanism: a key that no running check reads could be deleted without
# losing a guardrail, so it is not added).
# ---------------------------------------------------------------------------

[tool.livespec_dev_tooling]
# Heading-coverage scenario tiers (read directly off the table by
# `load_scenario_tiers`, not a Config role key). Includes `tests.e2e-cli`
# because this repo's user-surface tier lives under `tests/e2e-cli/`.
scenario_tiers = ["tests.e2e-cli", "tests.e2e", "tests.integration", "tests.consumer", "tests.prompts"]
# This repo's real source surface for the commit-pair gate: the two hook
# dirs (project-local `.claude/hooks/` + plugin-shipped
# `.claude-plugin/hooks/`). A commit touching either MUST co-stage a
# `tests/` change. The bare `dev-tooling/` directory is NOT a prefix — it
# carries only non-source artifacts (the family-standard git-hook
# scaffolds) that legitimately have no paired test, now that the
# structural check ships from the livespec-dev-tooling package rather than
# as a repo-local `dev-tooling/check_plugin_structure.py` (zs22.7.9.2).
source_tree_prefixes = [".claude/hooks/", ".claude-plugin/hooks/"]
tests_tree_prefix = "tests/"
