# pyproject.toml — livespec-driver-claude dev tooling configuration.
#
# Family conventions scaled to this repo's content: the only Python
# here is the repo-local structural check (stdlib-only) and the
# e2e-cli harness consumer test suite. NO [build-system] section: this
# repo is NOT a published PyPI package; it ships via Claude Code
# plugin bundling.

[project]
name = "livespec-driver-claude"
version = "0.0.0"
description = "Claude Code Driver for livespec — thin /livespec:* SKILL.md bindings"
requires-python = ">=3.10.16"
authors = [
    { name = "Chad Woolley", email = "thewoolleyman@gmail.com" },
]

# Per the livespec convention: NO [project.dependencies] table — the
# plugin bundle carries no runtime Python; end users install nothing.

[dependency-groups]
# Every Python dev tool is uv-managed via this table (resolved into
# uv.lock; installed into a project-local .venv via
# `uv sync --all-groups`). Mise pins only the non-Python binaries in
# .mise.toml.
dev = [
    "ruff==0.8.6",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "livespec-dev-tooling",
]

# livespec-dev-tooling is consumed from the github.com sibling-library
# repo via uv git source per
# livespec/SPECIFICATION/contracts.md §"Shared code sync — livespec-dev-tooling"
# (this repo consumes only its `testing.cli_e2e` harness).
[tool.uv.sources]
livespec-dev-tooling = { git = "https://github.com/thewoolleyman/livespec-dev-tooling.git", tag = "v0.54.6" }

# ---------------------------------------------------------------------------
# Ruff — sole linter + formatter. Rule set mirrors the family baseline
# (livespec/pyproject.toml [tool.ruff]) minus the product-code-only
# categories that have no surface in a tests-plus-one-check repo.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
# Hook trees are first-party source and must stay under Ruff BLE001 coverage;
# no_except_outside_io fails if an inspected source file is Ruff-excluded.
extend-exclude = ["_vendor/**", "**/__pycache__/**"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "PIE",   # flake8-pie
    "TID",   # flake8-tidy-imports
    "ERA",   # eradicate
    "ARG",   # flake8-unused-arguments
    "PT",    # flake8-pytest-style
    "ISC",   # flake8-implicit-str-concat
    "T20",   # flake8-print — bans print/pprint outside the check's stderr writes
]
ignore = [
    "ISC001",  # implicit-str-concat on one line; conflicts with the formatter
]

# The CLI end-to-end test directory is named `tests/e2e-cli/` by
# convention (livespec/SPECIFICATION/contracts.md §"CLI end-to-end
# harness contract" mandates a `tests/e2e-cli/` directory). The hyphen
# is not a valid Python module-name character, so N999 is exempted for
# that tree (it is never imported as a package by product code).
[tool.ruff.lint.per-file-ignores]
"tests/e2e-cli/**.py" = ["N999"]
# no_shadow_ledger.py is a byte-identical upstream canonical hook body; keep
# Ruff BLE001 coverage active while leaving its existing function shape intact.
".claude-plugin/hooks/no_shadow_ledger.py" = ["C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mock_only: skipped under LIVESPEC_E2E_HARNESS=real per the CLI e2e harness contract",
]

# ---------------------------------------------------------------------------
# livespec-dev-tooling consumer configuration
# (livespec/SPECIFICATION/contracts.md §"Consumer configuration schema").
#
# h3e7: WITHOUT this block, `load_config` falls back to the livespec-core
# historical layout (`.claude-plugin/scripts/livespec/` etc.), which does
# NOT match this thin Driver's real source surface — so
# `check-commit-pairs-source-and-test` was a silent no-op here (it tested
# `path.startswith(source_tree_prefixes)` against core paths that never
# occur in this repo). This block names THIS repo's actual source surface
# so the gate bites.
#
# EMPTY-BASELINE FLIP: the MOMENT any key exists in this block, the
# whole-block-absent core fallback is gone and every OMITTED Config role
# key reverts to the bare `Config()` baseline (empty tuples;
# `tests_tree_prefix` defaults to "tests/"). That is intentional and
# HARMLESS here — every OMITTED heavy role key is read only by canonical
# checks this thin Driver does NOT run, so an empty baseline no-ops them
# rather than misclassifying real files.
#
# fleet-check-coverage (livespec epic livespec-i5ebqd): this repo now ALSO
# wires the applies-to-all structural COVERAGE checks (justfile + ci.yml:
# check-all-declared, check-file-lloc, check-keyword-only-args,
# check-no-write-direct, check-partition-completeness, and the rest). Those
# checks do NOT read the heavy `source_trees`-family role keys for their
# universe — they derive it from the root-anchored git index
# (`resolve_check_universe` = `git ls-files '*.py'` minus `_vendor/`,
# `tests_tree_prefix`, `templates/`, and `@generated`). So the two hook
# `.py` (.claude-plugin/hooks/no_shadow_ledger.py + .claude/hooks/
# livespec_footgun_guard.py) ARE the universe, and the Config role keys
# these newly-wired checks actually consult here are only:
#   - `source_tree_prefixes` — the `partition_completeness` broad-role
#     claim for BOTH hooks (also the `commit_pairs` co-staging surface);
#   - `supervisor_entry_files` — the `no_write_direct` file-scope exemption
#     for `no_shadow_ledger.py` (see its key comment below);
#   - `file_lloc_hard_gate` — the `file_lloc` Phase-2 hard-gate arming flag.
# `source_trees` names the same first-party hook trees so the newer
# source-scoped checks inspect a non-empty, repo-accurate file set. The
# remaining heavy product-tree role keys (`io_trees`, `commands_trees`,
# `pure_trees`, `dataclasses_tree`, `covered_trees`, and `target_dirs`) stay
# deliberately omitted: this repo has no such separate tree roles.
# ---------------------------------------------------------------------------

[tool.livespec_dev_tooling]
# Phase-2 file_lloc FLIP (fleet-check-coverage epic livespec-i5ebqd). With
# this key true, `file_lloc` hard-gates this repo's WHOLE git-derived
# first-party-.py universe (>250 LLOC => error/exit 1) instead of WARN-only.
# Safe to arm: the universe is the two hook `.py`, both far under the ceiling
# (verified: `check-file-lloc` exits 0 with the gate armed, zero files >250).
# This is a SEVERITY increase, never a bypass (per livespec
# .ai/ci-gate-discipline.md and the fleet-check-coverage golden rules).
# Requires livespec-dev-tooling >= v0.39.0 (the flip lever; this repo is
# pinned at v0.40.0 above). Placed directly under the header, above the
# other keys, per the fleet placement convention.
file_lloc_hard_gate = true
# Heading-coverage scenario tiers (read directly off the table by
# `load_scenario_tiers`, not a Config role key). Includes `tests.e2e-cli`
# because this repo's user-surface tier lives under `tests/e2e-cli/`.
scenario_tiers = ["tests.e2e-cli", "tests.e2e", "tests.integration", "tests.consumer", "tests.prompts"]
# This repo's real source surface for the commit-pair gate: the two hook
# dirs (project-local `.claude/hooks/` + plugin-shipped
# `.claude-plugin/hooks/`). A commit touching either MUST co-stage a
# `tests/` change. The bare `dev-tooling/` directory is NOT a prefix — it
# carries only non-source artifacts (the family-standard git-hook
# scaffolds) that legitimately have no paired test, now that the
# structural check ships from the livespec-dev-tooling package rather than
# as a repo-local `dev-tooling/check_plugin_structure.py` (zs22.7.9.2).
source_tree_prefixes = [".claude/hooks/", ".claude-plugin/hooks/"]
source_trees = [".claude/hooks", ".claude-plugin/hooks"]
tests_tree_prefix = "tests/"
# Mirror pairings map each hook source tree to its test tree. Read by
# `check-tests-mirror-pairing` (every hook `.py` has a `tests/hooks/test_<name>.py`)
# and by `check-check-coverage-incremental` (which resolves a CHANGED impl path
# to its paired test tree — without a pairing it errors "not under any
# mirror-paired source tree"). Both hook trees are covered: the plugin-shipped
# bundle (`.claude-plugin/hooks/`) and the project-local footgun guard
# (`.claude/hooks/`).
mirror_pairings = [
    { source_tree = ".claude-plugin/hooks", test_tree = "tests/hooks" },
    { source_tree = ".claude/hooks", test_tree = "tests/hooks" },
]
# The single cross-Driver neutral shared body: the no-shadow-ledger Stop
# hook. `check-no-shadow-ledger-body-identical` asserts this file is
# BYTE-IDENTICAL to the packaged canonical body (`CANONICAL_NO_SHADOW_LEDGER_BODY`
# in livespec-dev-tooling), and `just install-no-shadow-ledger` writes the
# canonical body here. Both Drivers (this repo + livespec-driver-codex) ship
# the SAME body so one detection body serves both runtimes (livespec core
# contracts.md §"Driver-shipped hooks" → cross-Driver single-sourcing).
neutral_hook_body_path = ".claude-plugin/hooks/no_shadow_ledger.py"
# `check-tests-no-subprocess-spawn` bans subprocess spawns in tests unless
# the test file is allowlisted here. Each hook now has an in-process
# `main()` suite (real per-file coverage) PLUS exactly one retained
# subprocess smoke that proves the real hook I/O contract (stdin JSON →
# stdout decision, exit 0); those smokes deliberately spawn `python3
# <hook>`, whose child-process coverage is not collected by the parent —
# so they are declared here, not counted for coverage. The project-local
# footgun guard (`.claude/hooks/livespec_footgun_guard.py`) is exercised
# purely as a subprocess (its own project-level Bash-hook registration),
# so its test file is allowlisted too. `test_shipped_hooks_install_shape.py`
# is subprocess-ONLY by construction: it reproduces the INSTALL shape (only
# `.claude-plugin/` copied, bare interpreter, no repo on PYTHONPATH), which is
# unreachable from an in-process import of the checkout — the dev-shape import
# is precisely the blind spot that let a hook ship with an unresolvable
# module-scope import.
subprocess_spawn_allowlist = [
    "tests/hooks/test_block_auto_memory.py",
    "tests/hooks/test_warn_plan_persistence.py",
    "tests/hooks/test_no_shadow_ledger.py",
    "tests/hooks/test_tmux_fleet_guard.py",
    "tests/hooks/test_shipped_hooks_install_shape.py",
    "tests/hooks/test_livespec_footgun_guard.py",
]
# no_write_direct file-scope exemption. All four plugin-shipped hooks emit
# their payload on stdout as their documented I/O boundary:
# `no_shadow_ledger.py` and `warn_plan_persistence.py` (Stop hooks —
# `sys.stdout.write(<systemMessage-JSON>)`) and `block_auto_memory.py` /
# `tmux_fleet_guard.py` (PreToolUse hooks —
# `sys.stdout.write(<deny-decision-JSON>)`). Those stdout
# writes ARE each hook's I/O contract, exactly the "supervisor surface owns a
# documented stdout contract" case the `no_write_direct` exemption exists for
# (analogous to core's `run_static.py` findings-JSON contract). Declaring them
# here is honest classification — not a bypass — and clears the newly-covered
# no_write_direct WARNs while giving `partition_completeness` a specific
# (rather than broad-role) claim for each file. `no_shadow_ledger.py` is
# single-sourced BYTE-IDENTICALLY across both Drivers (livespec core
# contracts.md §"Driver-shipped hooks"), so its coverage is handled by config
# here, never by editing the shared body.
supervisor_entry_files = [
    ".claude-plugin/hooks/block_auto_memory.py",
    ".claude-plugin/hooks/warn_plan_persistence.py",
    ".claude-plugin/hooks/no_shadow_ledger.py",
    ".claude-plugin/hooks/tmux_fleet_guard.py",
    ".claude/hooks/livespec_footgun_guard.py",
]

# ---------------------------------------------------------------------------
# Coverage — the plugin-shipped hook bodies must be measured in-process at
# 100% (line + branch). `check-per-file-coverage` (canonical) and
# `check-coverage` (tool-backed total `fail_under = 100`) both read the
# `.coverage` data file `pytest --cov` writes over `tests/hooks/`. The
# in-process `main()` tests supply the coverage; the retained per-hook
# subprocess smokes exercise the real hook I/O contract but contribute no
# parent-process coverage (child processes are not measured), so they are
# declared in `subprocess_spawn_allowlist` above, not relied on for coverage.
# `_result.py` — the self-contained standard-library railway the shipped hooks
# import instead of a third-party `returns` the install cache cannot carry — is
# measured at the same 100% bar via its own container tests in
# `tests/hooks/test_rop_policy.py`.
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = [".claude-plugin/hooks"]
omit = [
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
include = [
    ".claude-plugin/hooks/_result.py",
    ".claude-plugin/hooks/_tmux_hazard.py",
    ".claude-plugin/hooks/block_auto_memory.py",
    ".claude-plugin/hooks/warn_plan_persistence.py",
    ".claude-plugin/hooks/no_shadow_ledger.py",
    ".claude-plugin/hooks/tmux_fleet_guard.py",
]
exclude_also = [
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# Pyright — `check-types` type-checks the hook trees under strict mode. The
# shared `no_shadow_ledger.py` body is now strict-clean upstream and remains
# byte-identity checked against the packaged canonical body.
# ---------------------------------------------------------------------------

[tool.pyright]
include = [".claude-plugin/hooks", ".claude/hooks"]
exclude = ["**/__pycache__/**"]
pythonVersion = "3.10"
stubPath = "typings"
reportMissingModuleSource = "none"
reportUnusedCallResult = "error"
typeCheckingMode = "strict"
